--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rollup/plugin-dynamic-import-vars",
+  "name": "rollup-plugin-dynamic-import-vars-for-grown-ups",
   "version": "1.4.0",
   "publishConfig": {
     "access": "public"
